Update Contact Us page: change GitHub link name to MCP Navigator and update URL

--- a/docs/docker-playwright-security-improved.mdx
+++ b/docs/docker-playwright-security-improved.mdx
@@ -121,21 +121,18 @@ CMD ["npx", "playwright", "test"]
 
 記住這個簡單的決策流程：
 
-<div className="mermaid">
-  {`
-    flowchart TD
-        A["我要寫 Dockerfile 了"] --> B{"裡面跑的程式信任嗎?"}
-        
-        B -- "信任<br>e.g., 自己的測試" --> C["懶人法：用 root 跑<br>但要知道風險"] 
-        B -- "不信任<br>e.g., 網路爬蟲" --> D["好習慣：建非 root 使用者"] 
-        
-        D --> E["睡覺睡得安穩❤️"] 
-        C --> F["偶爾擔心被駭😅"] 
-        
-        style E fill:#cfc,stroke-width:0px 
-        style F fill:#fcf,stroke-width:0px
-  `}
-</div>
+flowchart TD
+    A["我要寫 Dockerfile 了"] --> B{"裡面跑的程式信任嗎?"}
+    
+    B -- "信任: e.g., 自己的測試" --> C["懶人法：用 root 跑 但要知道風險"]
+    B -- "不信任: e.g., 網路爬蟲" --> D["好習慣：建非 root 使用者"] 
+    
+    D --> E["睡覺睡得安穩❤️"] 
+    C --> F["偶爾擔心被駭😅"] 
+    
+    style E fill:#cfc,stroke-width:0px 
+    style F fill:#fcf,stroke-width:0px
+
 
 ---
 
